ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "ad2e809cbcf864dbc8c610f89eeaa9c3-300698702.us-east-1.elb.amazonaws.com"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:533267151046:certificate/5efb1846-a250-4244-9b74-1170d8b0e4b3
spec:
  tls:
  - hosts:
    - saicloud.live
    secretName: my-tls-secret
  rules:
  - host: mydomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: boardgame-ssvc
            port:
              name: http
